# wmi

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD.mingw  README.md
.github/workflows/: publish.yml
diaa_sami_comsupp/: Makefile  diaa_sami_comsupp.cpp
include/: unistd.h  wmi.hpp  wmiclasses.hpp  wmiexception.hpp  wmiresult.hpp
src/: test.cpp  wmi.cpp  wmiresult.cpp
win/: mingw-build.sh
